Title: 산타의 선물 공장 2, Time: 1783ms, Memory: 89MB, Status: Passed - CodeTree